--- a/themes/next/source/css/_schemes/Pisces/_layout.styl
+++ b/themes/next/source/css/_schemes/Pisces/_layout.styl
@@ -2,20 +2,16 @@
   margin: 0 auto;
   position: relative;
   width: $content-desktop;
-
   +desktop-large() {
     width: $content-desktop-large;
   }
-
   +desktop-largest() {
     width: $content-desktop-largest;
   }
-
   +tablet-mobile() {
     width: auto;
   }
 }
-
 .header-inner {
   background: var(--content-bg-color);
   border-radius: $border-radius-inner;
@@ -25,23 +21,19 @@
   position: absolute;
   top: 0;
   width: $sidebar-desktop;
-
   +desktop-large() {
     width: $sidebar-desktop;
   }
-
   +tablet-mobile() {
     border-radius: initial;
     position: relative;
     width: auto;
   }
 }
-
 .main-inner {
   align-items: flex-start;
   display: flex;
   justify-content: space-between;
-
   if (hexo-config('sidebar.position') != 'right') {
     flex-direction: row-reverse;
   }
@@ -49,31 +41,27 @@
     width: auto;
   }
 }
-
 .content-wrap {
-  background: var(--content-bg-color);
+  // background: var(--content-bg-color);
+  background: none;
   border-radius: $border-radius-inner;
   box-shadow: $box-shadow-inner;
   box-sizing: border-box;
   padding: $content-desktop-padding;
   width: $content-wrap;
-
   +tablet-mobile() {
     border-radius: initial;
     padding: 20px;
     width: 100%;
   }
 }
-
 if (hexo-config('sidebar.position') == 'right') {
   .header-inner {
     right: 0;
   }
-
   .book-mark-link {
     left: $b2t-position-right;
   }
-
   .footer-inner {
     padding-right: 260px;
   }
@@ -81,19 +69,15 @@ if (hexo-config('sidebar.position') == 'right') {
   .footer-inner {
     padding-left: 260px;
   }
-
   .back-to-top {
     left: auto;
     right: $b2t-position-right;
-
     +tablet-mobile() {
       right: $b2t-position-right-mobile;
     }
   }
 }
-
 .footer-inner {
-
   +tablet-mobile() {
     padding-left: 0;
     padding-right: 0;
